--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,21 @@
     <version>1.0-SNAPSHOT</version>
 
 <dependencies>
-<dependency>
-    <groupId>com.konghq</groupId>
-    <artifactId>unirest-java</artifactId>
-    <version>3.1.02</version>
-</dependency>
-<dependency>
-    <groupId>com.github.pcj</groupId>
-    <artifactId>google-options</artifactId>
-    <version>1.0.0</version>
-</dependency>
+    <dependency>
+        <groupId>com.konghq</groupId>
+        <artifactId>unirest-java</artifactId>
+        <version>3.1.02</version>
+    </dependency>
+    <dependency>
+        <groupId>com.github.pcj</groupId>
+        <artifactId>google-options</artifactId>
+        <version>1.0.0</version>
+    </dependency>
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.18</version>
+    </dependency>
 </dependencies>
 
 </project>
